--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "server:build": "cd server && npm run build",
     "server:dev": "cd server && npm run dev",
     "install": "cd server && npm i && cd ../client && npm i",
-    "client:build": "cd client && npm run build",
+    "client:build": "cd client && npm i && npm run build",
     "client:dev": "cd client && npm run dev",
-    "build": "npm run server:build && npm run client:build",
+    "build": "cd server && npm i && npm run build",
     "seed": "cd server && npm run seed",
-    "render-build": "npm install && npm run build"
+    "render-build": "npm install && npm run build && npm run client:build"
   },
   "keywords": [],
   "author": "",
