package.json updates for building on Render.

--- a/package.json
+++ b/package.json
@@ -5,18 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm i && npm run seed && npm run build && npm run start:dev",
-    "start": "node server/dist/index.js",
-    "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3002 && npm run client:dev\"",
-    "server": "cd server && npm start",
-    "server:build": "cd server && npm run build",
-    "server:dev": "cd server && npm run dev",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "client:build": "cd client && npm i && npm run build",
+    "build": "cd client && npm run build && cd ../server && npm run build",
     "client:dev": "cd client && npm run dev",
-    "build": "cd server && npm i && npm run build",
-    "seed": "cd server && npm run seed",
-    "render-build": "npm install && npm run build && npm run client:build"
+    "server:dev": "cd server && npm run start",
+    "start:dev": "npm run build && concurrently \"npm run server:dev\" \"wait-on tcp:3002 && npm run client:dev\"",
   },
   "keywords": [],
   "author": "",
