--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "scripts": {
     "build": "npx tsc",
-    "start": "npm run build && node dist/server.js --ignore client",
+    "//": "npx nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "dev": "npx nodemon",
+    "start": "npm run build && node ./dist/server.js --ignore client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node dist/seeds/index.js"
   },
