--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd ./client && && npm i && npm run build && cd ../server && npm i && npm run build && cd ../",
+    "build": "cd ./client && npm i && npm run build && cd ../server && npm i && npm run build && cd ../",
     "client:dev": "cd client && npm run dev",
     "server:dev": "cd server && npm run start",
     "start:dev": "npm run build && concurrently \"npm run server:dev\" \"wait-on tcp:3002 && npm run client:dev\"",
