--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd ./client && npm i && npm run build && cd ../server && npm i && npm run build && cd ../",
+    "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3001 && npm run client:dev\"",
+    "server": "cd server && npm start",
+    "server:dev": "cd server && npm run dev",
+    "server:build": "cd server && npm run build",
+    "install": "cd server && npm i && cd ../client && npm i",
     "client:dev": "cd client && npm run dev",
-    "server:dev": "cd server && npm run start",
-    "start:dev": "npm run build && concurrently \"npm run server:dev\" \"wait-on tcp:3002 && npm run client:dev\"",
-    "install-and-build": "npm install && npm run build"
+    "client:build": "cd client && npm run build",
+    "dev": "vite",
+    "build": "npm run client:build && npm run server:build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "cd server && npm run start"
   },
   "keywords": [],
   "author": "",
