--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run client:build && npm run server",
     "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3001 && npm run client:dev\"",
     "server": "cd server && npm start",
     "server:dev": "cd server && npm run dev",
-    "server:build": "cd server && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
-    "client:dev": "cd client && npm run dev",
     "client:build": "cd client && npm run build",
-    "dev": "vite",
-    "build": "npm run client:build && npm run server:build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "cd server && npm run start"
+    "client:dev": "cd client && npm run dev",
+    "build": "cd client && npm run build",
+    "seed": "cd server && npm run seed",
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
