--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "concurrently": "^8.2.2",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
     "nodemon": "^3.1.3",
+    "typescript-eslint": "^8.22.0",
     "wait-on": "^7.2.0"
   }
 }
