--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 # postgresql settings on render
 DATABASE_URL="postgresql://postgres_prod:UWWm5NWsEf8Q7OpIOaLktsQnTTRzS2uo@dpg-cunc71ggph6c73eqig8g-a.virginia-postgres.render.com/kanban_db_asw4"
 DB_USER=postgres_prod
-DB_PASSWORD=UWWm5NWsEf8Q7OpIOaLktsQnTTRzS2uo
+DB_PASSWORD='UWWm5NWsEf8Q7OpIOaLktsQnTTRzS2uo'
 DB_NAME=kanban_db
 
 ## Local postgres settings - commented out for render
